--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(concat_mangled_files)
 export(demangle_filename)
 export(get_scratch_dir)
 export(mangle_filename)
+export(stage_filelist)
 export(stage_files)
 importFrom(magrittr,"%>%")
