--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,7 @@ export(mangle_filename)
 export(run_stage_one)
 export(stage_filelist)
 export(stage_files)
+export(stage_part1_results)
+export(unstage_all)
 export(write_stage1_swarmfile)
 importFrom(magrittr,"%>%")
