--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,12 @@ export(demangle_filename)
 export(get_scratch_dir)
 export(mangle_filename)
 export(run_stage_one)
+export(run_stages_2_5)
 export(stage_filelist)
 export(stage_files)
 export(stage_part1_results)
 export(unstage_all)
 export(write_stage1_swarmfile)
+export(write_stage2_5_R_script)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
