update swarm files.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,5 +14,6 @@ export(stage_part1_results)
 export(unstage_all)
 export(write_stage1_swarmfile)
 export(write_stage2_5_R_script)
+export(write_stage2_5_swarmfile)
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
