--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(concat_mangled_files)
 export(demangle_filename)
 export(get_scratch_dir)
 export(mangle_filename)
+export(rewrite_stage1_swarmfile)
 export(run_stage_one)
 export(run_stages_2_5)
 export(stage_filelist)
