add rewrite. changed mangling

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: biowR
 Title: Helper functions for Biowulf Cluster
-Version: 0.0.8
+Version: 0.0.9
 Authors@R: 
     c(person(given = "Daniel",
              family = "Russ",
@@ -26,4 +26,5 @@ Imports:
     tibble,
     fs,
     methods,
-    rlang
+    rlang,
+    uuid
