--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(demangle_filename)
 export(get_scratch_dir)
 export(mangle_filename)
 export(rewrite_stage1_swarmfile)
+export(rewrite_stage2_5_swarmfile)
 export(run_stage_one)
 export(run_stages_2_5)
 export(stage_filelist)
