--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
     dplyr,
-    GGIR,
+    GGIR (>= 3.0.0),
     jsonlite,
     lubridate,
     magrittr,
